--- a/front/Platender.Front/Components/Comment.razor
+++ b/front/Platender.Front/Components/Comment.razor
@@ -9,7 +9,7 @@
             </div>
             <MudText Style="color: #000000">@Date</MudText>
         </div> 
-        <div style="margin-left: 5%; display: flex; justify-content: space-between;   flex-shrink: 3;">
+        <div style="margin-left: 5%; display: flex; justify-content: space-between; flex-shrink: 3;">
             <MudPaper Elevation="3" Square="true"style="width:90%; margin:0 3% 0 2%; padding: 5%; border-radius:20px;">
                 <MudText >@Content</MudText>
             </MudPaper>
@@ -21,7 +21,8 @@
                     Src=@Image 
                     ObjectFit="MudBlazor.ObjectFit.ScaleDown"
                     Style="border-radius: 20px ;"
-                    @onclick="OpenDialog" Fluid="true"></MudImage>       
+                    @onclick="OpenDialog"
+                    Fluid="true"></MudImage>       
                 </div>
             }       
         </div>
