EUPlate improvements to be more generic, first steps to merge Login and Register into one Page

--- a/front/Platender.Front/Components/TableComponent.razor
+++ b/front/Platender.Front/Components/TableComponent.razor
@@ -38,6 +38,8 @@
 							PlateId="@driver.PlateId" 
 							CultureCode="@driver.Culture"
 							Number="@driver.Numbers"
+							DisplayFlag="true"
+							FlagSrc="images/EUFlagHD.jpg"
 							OnClickAction="@MoveToPlate">
 							</EUPlate>
 						</div>
