--- a/front/Platender.Front/Pages/Login.razor
+++ b/front/Platender.Front/Pages/Login.razor
@@ -36,3 +36,15 @@
 	</div>
 </MudForm>
 
+<MudPaper style="display: grid;  grid-template-columns: [first] 50% [second] 50%; grid-template-rows: [first] 50% [second] 50%; margin: 0 25% 0 25%;">
+	<div style="grid-column: first; grid-row: first">
+		<MudText>LOGO</MudText>
+	</div>
+	<div style="grid-column: second; grid-row: first">
+		<MudButton Style="background-color: yellowgreen;">LOGIN</MudText>
+	</div>
+	<div style="grid-column: second; grid-row: second;">
+		<MudButton Style="background-color: yellowgreen;">REGISTER</MudText>
+	</div>
+</MudPaper>
+
