--- a/front/Platender.Front/Components/EUPlate.razor
+++ b/front/Platender.Front/Components/EUPlate.razor
@@ -1,9 +1,12 @@
 <MudPaper @onclick="HandleClick">
-	<div style="display: flex; justify-content: flex-start; border: 1px solid #000000; border-radius: 10px; ">
-	<div style="max-width: 100px; max-height: 100px; text-align: center; background-color: #003399; color: #ffffff; border-radius: 10px 0 0 10px; width: 70px; text-transform: uppercase; font-size: 16px">
-		<MudImage src="images/EUFlagHD.jpg" Style="width: 70px; border-radius: 10px; height: 66px"></MudImage>
-		@CultureCode
-	</div>
+	<div style="display: flex; justify-content: flex-start; border: 1px solid #000000; border-radius: 10px; @BackgroundStyle;">
+		<div style="max-width: 100px; max-height: 100px; text-align: center; background-color: #003399; color: #ffffff; border-radius: 10px 0 0 10px; width: 70px; text-transform: uppercase; font-size: 16px">
+			@if(DisplayFlag)
+			{
+				<MudImage src=@FlagSrc Style="width: 70px; border-radius: 10px; height: 66px"></MudImage>
+			}
+			@CultureCode
+		</div>
 		<div style="display: flex; flex-grow:1; justify-content: center; align-items: center; font-size: 35px; text-transform: uppercase;">@Number</div>
 	</div>
 </MudPaper>
