Fix Account view component lifecycle, added IsLoginSent to stateManager

--- a/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
+++ b/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
@@ -3,7 +3,7 @@
 <MudPaper>
     <DataAnnotationsValidator />
     <MudText>Change password:</MudText>
-    <EditForm Model="@password">
+    <MudForm Model="@password">
         <MudCard>
             <MudCardContent>
                 <MudTextField @bind-Value="password.OldPassword" For="@(() => password.OldPassword)" Immediate="true"
@@ -28,10 +28,12 @@
                 </MudButton>
             </MudCardActions>
         </MudCard>
-        </MudForm>
+    </MudForm>
 </MudPaper>
 
 @code {
+    [Inject]
+    private AccountState AccountState { get; set; }
     public UserPasswordChange password = new();
 
     private bool _processing = false;
