--- a/front/Platender.Front/Pages/AccountView.razor
+++ b/front/Platender.Front/Pages/AccountView.razor
@@ -1,5 +1,5 @@
 @page "/Account"
-@using Platender.Front.Components
+@using Platender.Front.Components.AccountComponents
 @if (!_isUserLoggedIn)
 {
 	<MudPaper
