--- a/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
+++ b/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
@@ -1,20 +1,20 @@
 @using Platender.Front.Models
 @using Platender.Front.State;
+
 <MudPaper>
-    <DataAnnotationsValidator />
     <MudText>Change password:</MudText>
-    <MudForm Model="@password">
+    <MudForm>  
         <MudCard>
             <MudCardContent>
                 <MudTextField @bind-Value="password.OldPassword" For="@(() => password.OldPassword)" Immediate="true"
                     Label="Old Password" InputType="InputType.Password" />
                 <MudTextField @bind-Value="password.NewPassword" For="@(() => password.NewPassword)" Immediate="true"
                     Label="New Password" InputType="InputType.Password" />
-                <MudTextField @bind-Value="password.NewPassword" For="@(() => password.NewPassword2)" Immediate="true"
+                <MudTextField @bind-Value="password.NewPassword2" For="@(() => password.NewPassword2)" Immediate="true"
                     Label="Repeat new Password" InputType="InputType.Password" />
             </MudCardContent>
             <MudCardActions>
-                <MudButton Disabled="@_processing" ButtonType="ButtonType.Submit" Variant="Variant.Filled"
+                <MudButton Disabled="@_processing" Variant="Variant.Filled" OnClick="OnValidSubmit"
                     Color="Color.Primary" Class="ml-auto">
                     @if (_processing)
                     {
@@ -34,16 +34,28 @@
 @code {
     [Inject]
     private AccountState AccountState { get; set; }
+    [Inject]
+    private ISnackbar SnackbarService { get; set; }
     public UserPasswordChange password = new();
 
     private bool _processing = false;
 
-    private void OnValidSubmit(EditContext context)
+    private async Task OnValidSubmit()
     {
        _processing = true;
+       
+       await Task.Delay(3000);
        AccountState.IsChangePasswordSent = true;
-       Task.Delay(200);
        _processing = false;
+
+        SnackbarService.Add
+        (
+            @<div>
+                <span>Password changed succesfully!</span>                
+            </div>
+            ,
+            Severity.Success
+        );
        //TODO: ADD FUNCTIONALITY TO CHANGE PASSWORD ON BACKEND First
     } 
 }
