--- a/front/Platender.Front/Components/Comment.razor
+++ b/front/Platender.Front/Components/Comment.razor
@@ -8,35 +8,26 @@
                 <MudText>Avatar</MudText>
             </div>
             <MudText Style="color: #000000">@Date</MudText>
-        </div> 
+        </div>
         <div style="margin-left: 5%; display: flex; justify-content: space-between; flex-shrink: 3;">
-            <MudPaper Elevation="3" Square="true"style="width:90%; margin:0 3% 0 2%; padding: 5%; border-radius:20px;">
-                <MudText >@Content</MudText>
+            <MudPaper Elevation="3" Square="true" style="width:90%; margin:0 3% 0 2%; padding: 5%; border-radius:20px;">
+                <MudText>@Content</MudText>
             </MudPaper>
-            @if(!string.IsNullOrWhiteSpace(Image))
+            @if (!string.IsNullOrWhiteSpace(Image))
             {
                 <div style="max-width: 45%; ">
-                <MudImage 
-                    Class="cursor-zoom-in" 
-                    Src=@Image 
-                    ObjectFit="MudBlazor.ObjectFit.ScaleDown"
-                    Style="border-radius: 20px ;"
-                    @onclick="OpenDialog"
-                    Fluid="true"></MudImage>       
+                    <MudImage Class="cursor-zoom-in" Src=@Image ObjectFit="MudBlazor.ObjectFit.ScaleDown"
+                        Style="border-radius: 20px ;" @onclick="OpenDialog" Fluid="true"></MudImage>
                 </div>
-            }       
+            }
         </div>
     </MudCardContent>
-    @if(ShowActionButtons)
+    @if (ShowActionButtons)
     {
         <MudCardActions style="display: flex; flex-direction: row-reverse;">
-            <LikeComponent 
-            Id="@Id"
-            LikeAmount="@LikeAmount"
-            DislikeAmount="@DislikeAmount"
-            LikeButtonAction="@LikeButtonAction"
-            DislikeButtonAction="@DislikeButtonAction"
-            UserReaction="@UserReaction"></LikeComponent>
+            <LikeComponent Id="@Id" LikeAmount="@LikeAmount" DislikeAmount="@DislikeAmount"
+                LikeButtonAction="@LikeButtonAction" DislikeButtonAction="@DislikeButtonAction"
+                UserReaction="@UserReaction"></LikeComponent>
         </MudCardActions>
     }
 </MudCard>
@@ -69,7 +60,7 @@
     [Parameter]
     public EventCallback<Guid> LikeButtonAction { get; set; }
     [Parameter]
-    public EventCallback<Guid> DislikeButtonAction { get; set; }  
+    public EventCallback<Guid> DislikeButtonAction { get; set; }
     [Parameter]
     public string? UserReaction { get; set; }
 
@@ -77,7 +68,7 @@
     {
         var parameters = new DialogParameters<ImageDialog>();
         parameters.Add(x => x.Image, Image);
-        var options = new DialogOptions { ClassBackground = "my-custom-class", CloseOnEscapeKey = true, NoHeader = true};
+        var options = new DialogOptions { ClassBackground = "my-custom-class", CloseOnEscapeKey = true, NoHeader = true };
         DialogService.Show<ImageDialog>("Simple Dialog", parameters, options);
     }
 }
