--- a/front/Platender.Front/Pages/Plates.razor
+++ b/front/Platender.Front/Pages/Plates.razor
@@ -3,7 +3,7 @@
 @using Platender.Front.Models.Enums
 
 <div style="margin: 0 10% 0 10%;">
-       
+
     <MudPaper>
         <div style="
             display: flex; 
@@ -12,21 +12,18 @@
             border-radius: 10px;">
             <div style="
                 padding: 0 1% 1% 1%;
-                border-right: 1px solid #000000">		
-                <MudSelect 
-                    @bind-Value="CultureCode" 
-                    Label="Select Culture Code" 
-                    Style="
+                border-right: 1px solid #000000">
+                <MudSelect @bind-Value="CultureCode" Label="Select Culture Code" Style="
                         min-width: 200px; 
                         max-width:200px
-                        " 
-                    Clearable="true"
-                    AdornmentColor="Color.Secondary">
-                        <MudSelectItem T="CultureCode?" Value="null">---</MudSelectItem>
-                        @foreach (CultureCode cultureCode in Enum.GetValues(typeof(CultureCode)))
-                        {
-                            <MudSelectItem T="CultureCode?" value="@(cultureCode)"><MudText>@cultureCode</MudText></MudSelectItem>
-                        }
+                        " Clearable="true" AdornmentColor="Color.Secondary">
+                    <MudSelectItem T="CultureCode?" Value="null">---</MudSelectItem>
+                    @foreach (CultureCode cultureCode in Enum.GetValues(typeof(CultureCode)))
+                    {
+                        <MudSelectItem T="CultureCode?" value="@(cultureCode)">
+                            <MudText>@cultureCode</MudText>
+                        </MudSelectItem>
+                    }
                 </MudSelect>
             </div>
             <div style="
@@ -35,47 +32,35 @@
                 padding: 0 1% 1% 1%;
                 font-size: 35px;
                 text-transform: uppercase;">
-                <MudTextField 
-                    T="string" 
-                    @bind-Value="Numbers"
-                    Label="Car Plate Numbers"
+                <MudTextField T="string" @bind-Value="Numbers" Label="Car Plate Numbers"
                     RequiredError="Car plate numbers are required!" />
             </div>
         </div>
     </MudPaper>
- <div class="d-flex">
-        <MudButton
-            Disabled="@_processing"
-            Variant="Variant.Filled" 
-            Color="Color.Primary" 
-            Class="ml-auto" 
+    <div class="d-flex">
+        <MudButton Disabled="@_processing" Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto"
             OnClick="GetPlates">
             @if (_processing)
             {
-                <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true"/>
+                <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
                 <MudText Class="ms-2">Searching</MudText>
             }
             else
             {
                 <MudText>Search</MudText>
-            }</MudButton>
+            }
+        </MudButton>
     </div>
-    @if(IsGetPlatesSend)
+    @if (IsGetPlatesSend)
     {
-        @if(_plates.Items.Any())
+        @if (_plates.Items.Any())
         {
-            @foreach(var plate in _plates.Items)
+            @foreach (var plate in _plates.Items)
             {
                 <div style="padding: 0.5rem 0 0.5rem 0; display: flex;">
-                    <EUPlate
-                        PlateId="@plate.Id"
-                        CultureCode="@plate.Culture"
-                        Number="@plate.Number"
-                        OnClickAction="@MoveToPlate">
+                    <EUPlate PlateId="@plate.Id" CultureCode="@plate.Culture" Number="@plate.Number" OnClickAction="@MoveToPlate">
                     </EUPlate>
-                    <MudButton 
-                        Variant="Variant.Filled" 
-                        EndIcon="@Icons.Material.Filled.ArrowForwardIos"
+                    <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.ArrowForwardIos"
                         OnClick="(() => MoveToPlate(plate.Id))">
                         Check
                     </MudButton>
@@ -90,7 +75,8 @@
                     <EUPlate CultureCode="@SentCultureCode.ToString()" Number="@SentNumbers"></EUPlate>
                 </div>
                 <div class="d-flex align-center">
-                    <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" @onclick="PostPlate">Save Plate</MudButton>
+                    <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" @onclick="PostPlate">Save Plate
+                    </MudButton>
                 </div>
             </MudPaper>
         }
