--- a/front/Platender.Front/Components/ImageCarousel.razor
+++ b/front/Platender.Front/Components/ImageCarousel.razor
@@ -1,4 +1,5 @@
 @using Platender.Front.Models
+@using Platender.Front.Components.Dialogs
 @inject IDialogService DialogService
 <MudPaper Style="min-width:50vw; min-height: 50vh;">
     <MudCarousel ShowArrows="true" ShowBullets="true" EnableSwipeGesture="true" AutoCycle="true" TData="object"
