--- a/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
+++ b/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
@@ -1,4 +1,5 @@
 @using Platender.Front.Models
+@using Platender.Front.Services
 @using Platender.Front.State;
 
 <MudPaper>
@@ -35,6 +36,8 @@
     [Inject]
     private AccountState AccountState { get; set; }
     [Inject]
+    private IAuthService AuthService { get; set; }
+    [Inject]
     private ISnackbar SnackbarService { get; set; }
     public UserPasswordChange password = new();
 
@@ -44,7 +47,7 @@
     {
        _processing = true;
        
-       await Task.Delay(3000);
+       AuthService.ChangePasswordAsync(new DTO.UserCredentialsDto(password.OldPassword, password.NewPassword))
        AccountState.IsChangePasswordSent = true;
        _processing = false;
 
@@ -58,4 +61,8 @@
         );
        //TODO: ADD FUNCTIONALITY TO CHANGE PASSWORD ON BACKEND First
     } 
-}
+}    using Platender.Front.Services;
+
+#line default
+#line hidden
+#nullable disable
