ChangeAvatar somehow does not work (could not connect via browserAPI). Logout Component added. Change password Added and fixed old code.

--- a/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
+++ b/front/Platender.Front/Components/AccountComponents/ChangePassword.razor
@@ -47,7 +47,7 @@
     {
        _processing = true;
        
-       AuthService.ChangePasswordAsync(new DTO.UserCredentialsDto(password.OldPassword, password.NewPassword))
+       await AuthService.ChangePasswordAsync(new DTO.UserCredentialsDto(password.OldPassword, password.NewPassword));
        AccountState.IsChangePasswordSent = true;
        _processing = false;
 
@@ -61,8 +61,4 @@
         );
        //TODO: ADD FUNCTIONALITY TO CHANGE PASSWORD ON BACKEND First
     } 
-}    using Platender.Front.Services;
-
-#line default
-#line hidden
-#nullable disable
+}    
