--- a/front/Platender.Front/Pages/AccountView.razor
+++ b/front/Platender.Front/Pages/AccountView.razor
@@ -62,6 +62,7 @@ else
 				{
 					<ChangePassword></ChangePassword>
 				}
+				<LogoutButton OnClick="RevertToStart"></LogoutButton>
 			</MudCardActions>
 		</MudCard>
 	</MudPaper>
